testsuite/tests/typecheck/should_compile/tc070.hs
module ShouldSucceed where


data Boolean = FF | TT


idb :: Boolean -> Boolean
idb x = x      

