testsuite/tests/typecheck/should_fail/tcfail029.hs
-- !!! tests for InstOpErr
module ShouldFail where

data Foo = Bar | Baz

f x = x > Bar
